# Signature-Verification-Project

./: .replit  app.py  main.py  pyproject.toml  signature_verification.py
attached_assets/: app.py  signature_verification.py
static/css/: style.css
static/js/: main.js
templates/: index.html
